# ADSprojects

./: .gitignore
BFS/: BFS.cpp  CMakeLists.txt  DFS.cpp
Backpack/: CMakeLists.txt  main.cpp
Borders/: CMakeLists.txt  main.cpp
Boruvka/: CMakeLists.txt  main.cpp
Calc/: CMakeLists.txt  main.cpp
Check/: A.hpp  B.cpp  B.hpp  CMakeLists.txt  main.cpp
Compression/: CMakeLists.txt  ReadWriter.h  main.cpp
ContestBorders/: CMakeLists.txt  borders_template.cpp
Cruscal/: CMakeLists.txt  main.cpp
DamerauLevenstein/: CMakeLists.txt  main.cpp
Decompression/: CMakeLists.txt  Node.h  ReadWriter.h  main.cpp
Distances search for graphs/BellmanFord/: CMakeLists.txt  main.cpp
Distances search for graphs/Djikstra/: CMakeLists.txt  main.cpp
Distances search for graphs/FloydWarshell/: CMakeLists.txt  main.cpp
Distances search for graphs/Johnson/: CMakeLists.txt  main.cpp
Fano/: CMakeLists.txt  main.cpp
GreedyBackpack/: CMakeLists.txt  main.cpp
HufffmanTemp/: Encoder.cpp  Encoder.h
Huffman/: CMakeLists.txt  Huffman.cpp  Huffman.h  main.cpp
KR/: CMakeLists.txt  test_6.txt
KR/src/: BinaryHeap.h  BinaryHeap.hpp  main.cpp
Knight/: CMakeLists.txt  main.cpp
KnuthMorrisPrath/: CMakeLists.txt  substr_template.cpp
Learning/: CMakeLists.txt  main.cpp
Levenstein/: CMakeLists.txt  main.cpp
Prim/: CMakeLists.txt  main.cpp
Safeboard/: CMakeLists.txt  main.cpp
Saw/: CMakeLists.txt  saw_template.cpp
Stones/: CMakeLists.txt  ReadWriter.h  main.cpp
Strongly_connected_components/: CMakeLists.txt  actor_template.cpp
Subsequences/: CMakeLists.txt  subseq_template.cpp
SubstrCount/: CMakeLists.txt  substr_template.cpp
Topology_sort/: CMakeLists.txt  clothes_template.cpp
WagnerFisher/: CMakeLists.txt  main.cpp
calculator/: CMakeLists.txt  Token.cpp  Token.h  main.cpp
haffman/: CMakeLists.txt  main.cpp
mergesort/: CMakeLists.txt  MergeSort.h  ReadWriter.h  main.cpp
project/: BubbleSort.h  CMakeLists.txt  ReadWriter.h  main.cpp
project 1/prj/: readme.md
project 1/prj/src/: xipoint.cpp  xipoint.h
project 1/prj/tests/: CMakeLists.txt
project 1/prj/tests/gtest/src/: CMakeLists.txt  point_array_test.cpp  point_test.cpp
project 10/: CMakeLists.txt  definitions.txt  queries.txt
project 10/src/: main.cpp  parts.cpp  parts.h
project 11/prj/src/: CMakeLists.txt  main.cpp  rbtree.h  rbtree.hpp
project 11/project/: CMakeLists.txt
project 11/project/scripts/: dot-gif-all.cmd  dot-ps-all.cmd
project 11/project/src/: readme.md
project 11/project/src/main/: main.cpp  rbtree.h  rbtree.hpp
project 11/project/src/tests/: def_dumper.h  individual.h  rbtree_prv1_test.cpp  rbtree_pub1_test.cpp
project 12 - копия/CLionPrj/main/: btree.cpp
project 12 - копия/CLionPrj/tests/: individual.h
project 12 - копия/project/main/: btree_adapters.h  main.cpp
project 12 - копия/project/prj/sol/cmake/: CMakeLists.txt
project 12 - копия/project/prj/tests/gtest/sol/cmake/: CMakeLists.txt  UserParams.cmake
project 12 - копия/project/tests/: btreetestReopenFile1.xibt  btreetestSplit1.xibt  btreetestWritePage1.xibt
project 12/CLionPrj/main/: btree.h
project 12/CLionPrj/tests/: btree1_tests.cpp
project 12/project/prj/: contributors.txt  readme.md
project 12/project/tests/: CMakeLists.txt  btreetestIntAdSetGetKey1.xibt  btreetestKeysNCursors1.xibt  btreetestReopen1.xibt  btreetestSplit2.xibt  btreetestWorkPages1.xibt
project 12/project/tests/btreetest/: testsInsert1.xibt  testsInsert2.xibt  testsInsert3.xibt  testsInsertNonFull1.xibt  testsKeysNCursors2.xibt  testsReadPage1.xibt  testsSearch2.xibt  testsSearchAll1.xibt  testsSearchAll3.xibt  testsSplit1.xibt  testsSplit2.xibt
project 12/project/tests/gtest-fus/: gtest.h
project 2/prj/: readme.md
project 2/prj/src/: CMakeLists.txt  int_stack.cpp  int_stack.h  main.cpp  stack_machine.cpp  stack_machine.h
project 2/prj/tests/gtest/src/: CMakeLists.txt  int_stack_test.cpp  stack_machine_test.cpp
project 3/: index.html  readme.md
project 3/sol/cmake/: CMakeLists.txt  build-default.cmd
project 3/sol/vs12/: SafeArray.sln  SafeArray.vcxproj  SafeArray.vcxproj.filters
project 3/src/: main.cpp  safearray.h  safearray.hpp  subject.cpp
project 3/tests/: CMakeLists.txt
project 3/tests/gtest/src/: CMakeLists.txt  safearray_test.cpp  subject_test.cpp
project 4/prj/: readme.md
project 4/prj/res/: test.in  test2.in  test3.in  test5.in
project 4/prj/src/: CMakeLists.txt  dna_element.cpp  dna_element.h  dna_repairer.cpp  dna_repairer.h  linked_list.h  linked_list.hpp  main.cpp
project 4/prj/tests/gtest/sol/cmake/: CMakeLists.txt
project 4/prj/tests/gtest/src/: CMakeLists.txt
project 5/: CMakeLists.txt
project 5/S5NiceQueueTmpl/src/: NiceQueue.h  NiceQueue.hpp  NiceStack.h  NiceStack.hpp  main.cpp
project 6/: CMakeLists.txt
project 6/prj/: readme.md
project 6/prj/sol/cmake/: CMakeLists.txt  vars.cmd
project 6/prj/sol/vs12/: enhList.sln  enhList.vcxproj  enhList.vcxproj.filters
project 6/prj/src/: CMakeLists.txt  bidi_linked_list.h  bidi_linked_list.hpp  main.cpp
project 6/prj/tests/: CMakeLists.txt
project 6/prj/tests/gtest/sol/vs12/enhListTest/: enhListTest.vcxproj  enhListTest.vcxproj.filters
project 6/prj/tests/gtest/src/: CMakeLists.txt  bidi_linked_list_test.cpp
project 7/src/: 1.txt  CMakeLists.txt  city.h  main.cpp  priority_queue.h  rail_system.cpp  rail_system.h  service.h
project 8/Template (1)/Template/: JournalNetActivity.h  JournalNetActivity.hpp  SkipList.h  SkipList.hpp  (+2 more)
pyramid sort/: CMakeLists.txt  main.cpp
queue/Queue/: Queue.sln
quicksort/: CMakeLists.txt  qs_main.cpp
radixsort/: CMakeLists.txt  main.cpp
sem10/: A.cpp  C.cpp  CMakeLists.txt  D.cpp  main.cpp
sem10B/: CMakeLists.txt  main.cpp
sem11/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp
sem12/: CMakeLists.txt  astar_template.cpp  eratosthenes_template.cpp  places_template.cpp
skies/: CMakeLists.txt  Student_and_Ski.h  main.cpp
skies2/: CMakeLists.txt  ReadWriter.h  Solver.h  main.cpp
untitled/: main.cpp
untitled1/: CMakeLists.txt  ReadWriter.h  main.cpp
untitled2/: main.cpp
(+98 files in other folders)
